--- a/flaskinventory/templates/users/entries.html
+++ b/flaskinventory/templates/users/entries.html
@@ -55,6 +55,7 @@
       <th scope="col">Type</th>
       <th scope="col">uid</th>
       <th scope="col">Added</th>
+      <th scope="col">Actions</th>
     </tr>
   </thead>
   <tbody>
@@ -67,6 +68,7 @@
         <td>{{ entry.get("dgraph.type")[0] }}</td>
         <td>{{ entry.uid }}</th>
         <td>{{ entry.get("pending|timestamp") }}</td>
+        <td><div class="btn-group btn-group-sm" role="group"><a class="btn btn-primary" href="{{ url_for('view.view_uid', uid=entry.get('uid'))}}">View</a></div></td>
     </tr>
     {% endfor %}
     {% endif %}
