--- a/flaskinventory/templates/review/detail.html
+++ b/flaskinventory/templates/review/detail.html
@@ -1,29 +1,21 @@
 {% extends "layout.html" %} {% block content %}
 <article>
 
-    <div class="row justify-content-end">
-        <div class='col-6'>
+<div class="row justify-content-between mb-4">
+    <div class='col-4'>
         <h1>Review Mode</h1>
     </div>
-        <div class="col-2">
-            <form method="POST" action="{{ url_for('review.reject') }}">
-                {{ reject_button.hidden_tag() }}
-                {{ reject_button.reject(class="btn btn-danger me-4") }}
-            </form>
-        </div>
-        <div class="col-2">
-            <a href="{{ url_for('edit.edit_uid', uid=entry.uid)}}" class="btn btn-warning">Edit</a>
-        </div>
-
-        <div class="col-2">
-
-            <form method="POST" action="{{ url_for('review.accept') }}">
-                {{ accept_button.hidden_tag() }}
-                {{ accept_button.accept(class="btn btn-success me-4") }}
-            </form>
-        </div>
-
-
+    <div class="col-4">
+        <form method="POST" action="{{ url_for('review.submit') }}">
+            {{ review_actions.hidden_tag() }}
+            <div class="btn-group" role="group" aria-label="Review Actions">
+                {{ review_actions.reject(class="btn btn-danger") }}
+                {{ review_actions.edit(class="btn btn-warning") }}
+                {{ review_actions.accept(class="btn btn-success") }}
+            </div>
+            
+        </form>
+    </div>
 </div>
 
 {% if dgraphtype == 'Source' %}
