added search by term route

--- a/flaskinventory/templates/query_result.html
+++ b/flaskinventory/templates/query_result.html
@@ -5,3 +5,9 @@
 <p class="text-muted">You searched for {{ request.args.entity }} in {{ request.args.country }}</p>
 
 {{ table }} {% endblock content %}
+
+{% block sidebar %}
+
+{% include "sidebar_query.html" %}
+
+{% endblock sidebar %}
