--- a/flaskinventory/templates/review/overview.html
+++ b/flaskinventory/templates/review/overview.html
@@ -47,9 +47,9 @@
         <td><span class="d-inline-block text-truncate" style="max-width: 200px;">{{ entry.unique_name }}</span></td>
         <td>{{ entry.get("dgraph.type")[0] }}</td>
         <td>{{ entry.uid }}</th>
-        <td>{% for country in entry.get('country') %}
+        <td>{% if entry.get('country') %} {% for country in entry.get('country') %}
             {{ country.get("name") }} 
-            {% endfor %}
+            {% endfor %}{% endif %}
         </th>
         <td>{% if entry.entry_added.get("entry_added|timestamp") %}{{ entry.entry_added.get("entry_added|timestamp").strftime('%d-%m-%Y') }}{% endif %}</td>
         <td>{{ entry.entry_added.get("user_displayname") }}</td>
