founded date can now be left blank

--- a/flaskinventory/templates/add/newsource.html
+++ b/flaskinventory/templates/add/newsource.html
@@ -404,8 +404,8 @@
             <label for="geographic-scope-multiple" class="form-label fw-bold fs-5">What is the multinational scope?</label>
             <small id="geographic-scope-multiple-helptext"></small>
             <select name="geographic_scope_multiple" id="geographic-scope-multiple" class="form-select form-select-lg" aria-describedby="geographic-scope-multiple-feedback" placeholder="Select multiple or create new entries..." autocomplete="off" required multiple></select>
-            <input id="geographic-scope-countries-hidden" name="geographic_scope_countries" type="text" class="form-control" readonly>
-            <input id="geographic-scope-subunits-hidden" name="geographic_scope_subunits" type="text" class="form-control" readonly>
+            <input id="geographic-scope-countries-hidden" name="geographic_scope_countries" type="text" class="form-control" readonly hidden>
+            <input id="geographic-scope-subunits-hidden" name="geographic_scope_subunits" type="text" class="form-control" readonly hidden>
             <div id="geographic-scope-multiple-feedback"></div>
         </div>
 
