--- a/flaskinventory/templates/view/elements/detail_source.html
+++ b/flaskinventory/templates/view/elements/detail_source.html
@@ -81,49 +81,49 @@
             <ul class="list-group list-group-horizontal">
                 <li class="list-group-item 
                 {% if 1 in entry.publication_cycle_weekday %}
-                list-group-item-primary
+                list-group-item-success
                 {% else %}
                 list-group-item-secondary
                 {% endif %}
                 ">Mon</li>
                 <li class="list-group-item 
                 {% if 2 in entry.publication_cycle_weekday %}
-                list-group-item-primary
+                list-group-item-success
                 {% else %}
                 list-group-item-secondary
                 {% endif %}
                 ">Tue</li>
                 <li class="list-group-item 
                 {% if 3 in entry.publication_cycle_weekday %}
-                list-group-item-primary
+                list-group-item-success
                 {% else %}
                 list-group-item-secondary
                 {% endif %}
                 ">Wed</li>
                 <li class="list-group-item 
                 {% if 4 in entry.publication_cycle_weekday %}
-                list-group-item-primary
+                list-group-item-success
                 {% else %}
                 list-group-item-secondary
                 {% endif %}
                 ">Thu</li>
                 <li class="list-group-item 
                 {% if 5 in entry.publication_cycle_weekday %}
-                list-group-item-primary
+                list-group-item-success
                 {% else %}
                 list-group-item-secondary
                 {% endif %}
                 ">Fri</li>
                 <li class="list-group-item 
                 {% if 6 in entry.publication_cycle_weekday %}
-                list-group-item-primary
+                list-group-item-success
                 {% else %}
                 list-group-item-secondary
                 {% endif %}
                 ">Sat</li>
                 <li class="list-group-item 
                 {% if 7 in entry.publication_cycle_weekday %}
-                list-group-item-primary
+                list-group-item-success
                 {% else %}
                 list-group-item-secondary
                 {% endif %}
