--- a/flaskinventory/templates/add/database_check.html
+++ b/flaskinventory/templates/add/database_check.html
@@ -7,7 +7,34 @@
     </div>
     <div class="mb-5">
             
-            {{ table }} 
+        
+<table class="table">
+    <thead>
+      <tr>
+            <th scope="col">Name</th>
+            <th scope="col">Channel</th>
+            <th scope="col">Country</th>
+            <th scope="col">Other Names</th>
+            <th scope="col">Status</th>
+            <th scope="col">Action</th>
+
+        </tr>
+    </thead>
+    <tbody>
+    
+      {% for entry in result %}
+      <tr>
+        <td><a href="{{ url_for('view.view_uid', uid=entry.get('uid'))}}">{{ entry.name }}</a></td>
+        <td>{{ entry.channel.get('name')}}</td>
+        <td>{% if entry.get('geographic_scope_countries') %}{{ entry.geographic_scope_countries[0].get('name') }}{% endif %}</td>
+        <td>{% if entry.get('other_names') %}{{ ", ".join(entry.other_names) }}{% endif %}</td>
+        <td>{{ entry.get('entry_review_status')}}</td>
+        <td>{% if entry.get('entry_review_status') == 'draft' %}<a class="btn btn-sm btn-primary" href="{{ url_for('add.new_source', draft=entry.get('uid')) }}">Continue editing</a>{% endif %}</td>
+      </tr>
+      {% endfor %}
+      </tbody>
+  </table>
+
             
     </div>
 </div>
