--- a/flaskinventory/templates/add/newentry.html
+++ b/flaskinventory/templates/add/newentry.html
@@ -1,9 +1,22 @@
 {% extends "layout.html" %} {% block content %}
 
 <main>
-    <h1>Add new entry</h1>
-    <p class="fs-5 col-md-8">Placeholder for disclaimer and learning module...</p>
-    <div class="mb-5">
+    <h1 class="display-5 mb-4">Add new entry</h1>
+
+    <div class="row mb-4">    
+        <div class="col-8">
+        <div class="alert alert-info" role="alert">
+            <h4 class="alert-heading">First time doing this?</h4>
+            <p>Please quickly read through our <a class="fw-bold" href="{{ url_for('main.guides_newssource') }}" target="_blank">detailed guide for adding entries</a> to the inventory.</p>
+            <p>Quick Tips</p>
+            <ul>
+                <li>The <i class="fas fa-info-circle mx-1"></i> icon next to the questions give you additional information and explanations</li>
+                <li>The <i class="fas fa-book mx-1"></i> icons give you ideas on how to retrieve some specific information</li>
+            </ul>
+    </div>
+</div>
+    
+    <div class="my-4">
         {% if form %}
         <form method="POST" action="">
             {{ form.hidden_tag() }}
