--- a/flaskinventory/templates/home.html
+++ b/flaskinventory/templates/home.html
@@ -50,7 +50,7 @@
             <h2>Guides</h2>
             <p>Read more detailed instructions and documentation on using or contributing to the inventory.</p>
             <ul class="icon-list">
-                <li class="text-muted">coming soon...</li>
+                <li><a class="fw-bold" href="{{ url_for('main.guides_newssource') }}" target="_blank">detailed guide for adding news sources to the inventory.</a></li>
             </ul>
         </div>
     </div>
